GB3-377: Fix bug with wrong height of expansion panel for maps on mobile

--- a/src/app/map/components/search-window/result-groups/result-group/result-group.component.scss
+++ b/src/app/map/components/search-window/result-groups/result-group/result-group.component.scss
@@ -46,6 +46,11 @@
 
   .result-group__container {
     overflow-y: auto;
+    max-height: 20vh;
+
+    &--mobile {
+      max-height: unset;
+    }
 
     .result-group__container__element {
       box-shadow: none;
